--- a/index.html
+++ b/index.html
@@ -165,81 +165,45 @@
         <main>
             <!-- 板块 1 -->
             <div class="section">
-                <h2>单曲合集</h2>
-                <p>aespa的单曲大全</p>
-                <a href="https://aespasynkmy.github.io/danqu/" class="link-button" target="_blank">
+                <h2>歌曲一</h2>
+                <p>Supernova</p>
+                <a href="https://weibo.com/5795013414/5038210885091422" class="link-button" target="_blank">
                     🎶 详情
                 </a>
             </div>
 
             <!-- 板块 2 -->
             <div class="section">
-                <h2>Mini1</h2>
-                <p>Savage</p>
-                <a href="https://weibo.com/5795013414/5099115975021698" class="link-button" target="_blank">
+                <h2>歌曲二</h2>
+                <p>Black Mamba</p>
+                <a href="https://weibo.com/5795013414/5038211231386285" class="link-button" target="_blank">
                     🎶 详情
                 </a>
             </div>
 
             <!-- 板块 3 -->
             <div class="section">
-                <h2>Mini2</h2>
-                <p>Girls</p>
-                <a href="https://aespasynkmy.github.io/mini2/" class="link-button" target="_blank">
+                <h2>歌曲三</h2>
+                <p>Spicy</p>
+                <a href="https://weibo.com/5795013414/5038211740470432" class="link-button" target="_blank">
                     🎶 详情
                 </a>
             </div>
 
             <!-- 板块 4 -->
             <div class="section">
-                <h2>Mini3</h2>
-                <p>MY WORLD</p>
-                <a href="https://aespasynkmy.github.io/mini3/" class="link-button" target="_blank">
+                <h2>歌曲四</h2>
+                <p>时代遗憾</p>
+                <a href="https://weibo.com/5795013414/5038211808101424" class="link-button" target="_blank">
                     🎶 详情
                 </a>
             </div>
 
             <!-- 板块 5 -->
             <div class="section">
-                <h2>Mini4</h2>
-                <p>Drama</p>
-                <a href="https://weibo.com/5795013414/5096323892381666" class="link-button" target="_blank">
-                    🎶 详情
-                </a>
-            </div>
-
-            <!-- 板块 6 (新增) -->
-            <div class="section">
-                <h2>The 1th Album</h2>
-                <p>Armageddon</p>
-                <a href="https://aespasynkmy.github.io/t1a/" class="link-button" target="_blank">
-                    🎶 详情
-                </a>
-            </div>
-
-            <!-- 板块 7 (新增) -->
-            <div class="section">
-                <h2>日本出道专</h2>
-                <p>Hot Mess</p>
-                <a href="https://weibo.com/5795013414/5099482699533065" class="link-button" target="_blank">
-                    🎶 详情
-                </a>
-            </div>
-            
-            <!-- 板块 8 (新增) -->
-            <div class="section">
-                <h2>Mini5</h2>
-                <p>Whiplash</p>
-                <a href="https://weibo.com/5795013414/5094526905488463" class="link-button" target="_blank">
-                    🎶 详情
-                </a>
-            </div>
-
-            <!-- 板块 9 (新增) -->
-            <div class="section">
-                <h2>Mini6</h2>
-                <p>Rich Man</p>
-                <a href="https://weibo.com/5795013414/5207661885787641" class="link-button" target="_blank">
+                <h2>歌曲五</h2>
+                <p>Next Level</p>
+                <a href="https://weibo.com/5795013414/5038212433054329" class="link-button" target="_blank">
                     🎶 详情
                 </a>
             </div>
@@ -265,6 +229,7 @@
     </script>
 </body>
 </html>
+
 
 
 
